ipc/ipdl/test/ipdl/ok/PmanagerProtocol.ipdl
include protocol PmanagedProtocol;

// sanity check of managed/manager protocols

protocol PmanagerProtocol {
    manages PmanagedProtocol;

parent:
    async PmanagedProtocol(int i);

};
